<resources>
    <string name="app_name">Samara Work</string>
    <string name="txt_about_us">Рады приветствовать Вас, друзья.\nВы уже стали частью нашего коллектива, частичкой креативной,
        динамичной и порядочной строительной компании в Украине, SAMARA Group. Теперь Вы можете  рассчитывать на достойную оплату,
        получение дополнительного дохода в виде бонусов, постоянную работу, участие в Фонде взаимной помощи.\n\nРаботаем на рынке Украины с
        2000 года. Нашими основными клиентами являются крупные сетевые и корпоративные клиенты. В Европу ехать не нужно, у нас условия лучше.
        Предлагаем достойно жить и развиваться в Украине, вместе. Рассчитываем на сотрудничество.

    </string>
    <string name="txt_rules"><b>Регистрация:</b> это первое с чего Вы начнете. Регистрация нужна для идентификации Вас, как пользователя.
        Для накопления бонусов, их контроля и использования. Взаимодействия внутри компании. Получения важных сообщений.
        Процедура регистрация, довольно проста. Не сложнее, чем в любом мессенджере. Зарегистрироваться Вы можете через меню «Новый пользователь».\n\n<b>Бонус в 1000 гривен за привлечение:</b> После входа, в главное меню, нажимая кнопку «Получить 1000 гривен, за привлечение», система предложит
        Вам привлечь в нашу строительную компанию Ваших коллег строителей, любых специальностей, и получить 1000 гривен за каждого привлеченного,
        без ограничений в количестве. Таким образом, за 100 привлеченных специалистов, Вы можете получить 100 000 гривен.
        Для получения бонуса, в соответствующем меню, заполняете поля, где указаны: имя, номер телефона, специальность.
        После чего, ссылка в виде сообщения, отправляется на номер потенциальных сотрудников, Вами предложенных.
        Для того чтоб она ими не была удалена, пожалуйста, сообщите о нашей компании и этом сервисе, им заранее.
        После их перехода, скачивания в Play Market и регистрации в приложении, Вы это увидите в Меню пользователя.
        После подачи ими отчетов, через приложение, на сумму 15 000 гривен, система автоматически начислит Вам на бонусный счет 1000 гривен.\n\n<b>Бонусы за работу в компании:</b> После входа, в главном меню, нажимая кнопку «Получить бонус за работу в компании»,
        Вы получаете бонусы, помимо основной  зарплаты, в виде возврата (Кешбек) в размере 2% за работу в Днепре и 4% за его пределами.
        Процент вычисляется от суммы поданного Вами и согласованного нами отчета. Для их получения, Вам необходимо в данном меню указать:
        название объекта, адрес объекта, сумму выполненных работ, дату отчета, и загрузить с галереи/сделать фото (на выбор) отчета выполненных работ.
        Нажать «Отправить». После отправки, Ваш отчет будет в статусе Проверки администратором. После проверки и утверждения, бонус будет
        начислен и доступен для использования.\n\n<b>Увидеть и потратить бонусы:</b> При нажатии кнопки «Управление бонусами», Вы увидите меню, где будет следующая информация:
        Дата бонуса, сумма бонуса, статус бонуса (В работе/Начислено). При нажатии на поле бонуса, можно увидеть более, развернутую информацию о нем.
        А именно: дата отчета, сумма отчета (в случае привлечения коллег, в поле стоит ноль), вид бонуса (Привлечение/Работа Днепр/Командировка),
        статус, количество бонуса в гривнах, фото отчета (если загружалось).\n\n<b>Ваше сообщение:</b> Для того чтоб задать интересующий Вас вопрос, воспользуйтесь кнопкой «Написать администратору».
        Заполняйте поля «Тема сообщения», «Название объекта», «Адрес объекта», «Ваш вопрос». И отправляйте.\n\n<b>Воспользоваться бонусами:</b> 1 бонус = 1 гривне. Потратить бонусы можно в третий четверг каждого месяца
        (кроме официальных праздников, выпадающих на этот день недели, в этом случае день выплат смещается на следующий четверг).
        Бонусы находятся на безналичном счету и не могут стать наличными деньгами. Бонусами Вы можете оплатить строительный инструмент или реквизит,
        а также оплатить поездку на морской курорт. Эти траты осуществляются только в пределах Партнеров нашей компании.
        Почему можно потратить бонусы только на все вышеперечисленное, а не купить велосипед ребенку, например?
        Ответ прост, мы можем списать только эти статьи затрат, по бухгалтерии.
        При достижении суммы, которую Вы можете потратить, переходите «Управление бонусами» и действуйте согласно меню.
    </string>
    <string name="txt_get_money_info">Для получения бонуса 1000 гривен, за каждого привлеченного специалиста - строителя в компанию, введите его данные</string>
    <string name="title_about_us">о нас</string>
    <string name="phone_left">0679300925</string>
    <string name="phone_right">0639484602</string>
    <string name="txt_get_money">Получить 1000 гривен, за привлечение</string>
    <string name="txt_get_bonus">Получить бонус за работу в компании</string>
    <string name="txt_my_bonus">Управлять моими бонусами</string>
    <string name="txt_chat">Чаты, группы, сообщения</string>
    <string name="txt_admin">Написать администратору</string>
    <string name="hint_title">НАЗВАНИЕ ОБЪЕКТА</string>
    <string name="hint_city">АДРЕС ОБЪЕКТА</string>
    <string name="hint_sum">ВВЕДИТЕ СУММУ ОТЧЕТА</string>
    <string name="hint_photo">ЗАГРУЗИТЕ ФОТО ОТЧЕТА</string>
    <string name="btn_txt_send">Отправить</string>
    <string name="hint_name">ИМЯ И ФАМИЛИЯ*</string>
    <string name="hint_phone">ТЕЛЕФОН*</string>
    <string name="hint_spec">ВЫБЕРЕТЕ ЕГО СПЕЦИАЛЬНОСТЬ</string>
    <string name="btn_txt_login">Войти</string>
    <string name="registration">новый\nпользователь</string>
    <string name="rules">правила пользования</string>
    <string name="title_main">Приложение для строителей</string>
    <string name="main_info">приведи коллегу - получи 1000 грн\n\nполучай бонусы за работу в компании</string>
    <string name="main_info2">УПРАВЛЕНИЕ БОНУСАМИ\nПОЛУЧЕНИЕ ЗАКАЗОВ\nОБЩЕНИЕ В КОМПАНИИ</string>
    <string name="txt_ru">Русский</string>
    <string name="txt_uk">Українська</string>
    <string name="my_bonus">Мои бонусы</string>
    <string name="txt_get">Начислено</string>
    <string name="btn_txt_status">Статус\nбонусов</string>
    <string name="btn_txt_use">Потратить\nбонусы</string>
    <string name="hint_surname">ГОРОД ПРОЖИВАНИЯ*</string>
    <string name="hint_you_spec">ВАША СПЕЦИАЛЬНОСТЬ*</string>
    <string name="hint_count">КОЛИЧЕСТВО ЧЕЛОВЕК В БРИГАДЕ*</string>
    <string name="hint_comand">командировки*</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="sign_up">зарегестрироваться</string>
    <string name="status">Статус бонусов</string>
    <string name="use">Потратить бонусы</string>
    <string name="bonus_sum">СУММА</string>
    <string name="get_use">ВЫБЕРЕТЕ НА ЧТО ПОТРАТИТЬ</string>
    <string name="title_get_bonus">Для получения бонусов, за работу в компании 2% в Днепре, и 4% в других регионах\nЗаполните и отправьте нам форму</string>
    <string name="hint_pass">ПАРОЛЬ (НЕ МЕНЕЕ 7 СИМВОЛОВ)*</string>

    <string name="cancel">Отмена</string>


    <string name="take_photo">Сделать фото</string>
    <string name="need_perm">Необходимы разрешения</string>
    <string name="msg_perm">Эта программа требует разрешения на использование этой функции. Их можно предоставить в настройках программы.</string>
    <string name="go_setting">Перейти к настройкам</string>
    <string name="hint_mail">ПОЧТА*</string>
    <string name="library">Из галереи</string>
    <string name="at_work">В работе</string>
    <string name="accrued">Начислено</string>
    <string name="error_name">Введите имя</string>
    <string name="error_address">Введите адресс</string>
    <string name="reg_success">Регистрация успешна!</string>
    <string name="error_user_found">Пользователь с таким номером уже существует</string>
    <string name="error">Ошибка, повторите попытку!</string>
    <string name="error_amount">Введите количество людей</string>
    <string name="error_small_amount">Количество людей должно быть больше 0</string>
    <string name="error_tour">Заполните поле \"Командировки\"</string>
    <string name="error_spec">Выберите специальность</string>
    <string name="error_phone">Введите номер телефона</string>
    <string name="error_email">Введите email</string>
    <string name="invalid_email">email введен не корректно</string>
    <string name="error_pass">Введите пароль</string>
    <string name="invalid_pass">Пароль должен содержать больше 5 символов</string>
    <string name="bonus_work">Бонус за работу</string>
    <string name="success">Успешно отправлено на обработку</string>
    <string name="bonus_invite">Бонус за привлечение</string>
    <string name="error_sum">Введите сумму</string>
    <string name="error_category">Выберите на что потратить</string>
    <string name="no_data">Отсутствуют активные чаты</string>
    <string name="hint_question">ЗАДАЙТЕ ВОПРОС</string>
    <string name="admin">Вопрос администратору</string>
    <string name="error_question">Задайте вопрос</string>
    <string name="you_question">Ваш вопрос</string>
    <string name="answer">Ответ</string>
    <string name="no_answer">Нет ответа</string>
    <string name="code">Код верификации</string>
    <string name="input_code">Введите код с СМС</string>
    <string name="canceled">Отмена</string>
    <string name="hint_city2">ГОРОД И АДРЕС ОБЪЕКТА</string>
    <string name="error_code">Код не верный</string>
    <string name="input_ver_code">Введите код!</string>
    <string name="new_message">У вас новое сообщение</string>
    <string name="error_photo">Загрузите фото</string>
    <string name="error_city_address">Введите город и адрес объекта</string>
    <string name="error_sum_zero">Сумма должна быть больше 0</string>
    <string name="error_name_obj">Введите название объекта</string>
    <string name="error_money">Недостаточно денег на счету</string>
    <string-array name="spec">
        <item>Сантехник</item>
        <item>Электрик</item>
        <item>Отделочник</item>
        <item>Гипсокартонщик</item>
        <item>Плиточник</item>
        <item>Декоративщик</item>
        <item>Штукатур</item>
        <item>Напольные покрытия</item>
        <item>Столярные работы</item>
        <item>Общестрой и стяжка</item>
        <item>Бетон и арматура</item>
        <item>Каменщик</item>
        <item>Сварщик</item>
        <item>Кровля мягкая</item>
        <item>Кровля жесткая</item>
        <item>Фасадчик</item>
        <item>Альпинист</item>
        <item>Алмазная резка</item>
        <item>Разнорабочий</item>
        <item>Подсобный рабочий</item>
        <item>Другие работы</item>
    </string-array>
    <string-array name="use">
        <item>Электроинструмент</item>
        <item>Отдых</item>
    </string-array>
</resources>
