<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ContentActivity">

    <TextView
        android:id="@+id/phone_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_left"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/phone_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_right"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/get_money"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/button_border"
        android:text="@string/txt_get_money"
        app:layout_constraintTop_toBottomOf="@id/phone_left"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/get_bonus"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/button_border"
        android:text="@string/txt_get_bonus"
        app:layout_constraintTop_toBottomOf="@id/get_money"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/my_bonus"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/button_border"
        android:text="@string/txt_my_bonus"
        app:layout_constraintTop_toBottomOf="@id/get_bonus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/chat"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="20dp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/button_border"
        android:text="@string/txt_chat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/admin"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="20dp"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:background="@drawable/button_border"
        android:text="@string/txt_admin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>