<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.GetMoneyActivity">

    <TextView
        android:id="@+id/txt_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:text="@string/title_get_bonus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edt_title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/hint_title"
        android:paddingStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:textColorHint="@android:color/black"
        android:background="@drawable/edt_border"
        app:layout_constraintTop_toBottomOf="@id/txt_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edt_city"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/hint_city2"
        android:paddingStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:textColorHint="@android:color/black"
        android:background="@drawable/edt_border"
        app:layout_constraintTop_toBottomOf="@+id/edt_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.santalu.maskedittext.MaskEditText
        android:id="@+id/edt_phone"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/hint_phone"
        android:paddingStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:inputType="phone"
        android:enabled="false"
        android:textColor="@drawable/edit_text_selector"
        android:textColorHint="@android:color/black"
        android:background="@drawable/edt_border"
        app:layout_constraintTop_toBottomOf="@+id/edt_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:met_mask="+38(###)###-##-##"/>

    <EditText
        android:id="@+id/edt_sum"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:hint="@string/hint_sum"
        android:paddingStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textSize="16sp"
        android:inputType="number"
        android:textColorHint="@android:color/black"
        android:background="@drawable/edt_border"
        app:layout_constraintTop_toBottomOf="@+id/edt_phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/photo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/report_ru"
        android:textColorHint="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/edt_sum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_send"/>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button_border"
        android:text="@string/btn_txt_send"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:elevation="3dp"
        android:focusable="true"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:elevation="3dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>